--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dotted-map": "^2.2.3",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
